L3 for loops notebook

--- a/L3/for-loops.ipynb
+++ b/L3/for-loops.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,17 +48,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Helsinki'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "european_cities[0]"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Paris'"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "european_cities[1]"
+   ]
   },
   {
    "cell_type": "code",
@@ -92,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "editable": true,
     "slideshow": {
@@ -107,10 +133,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Riga'"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "european_cities[0]"
+   ]
   },
   {
    "cell_type": "code",
@@ -154,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "editable": true,
     "slideshow": {
@@ -169,10 +208,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Riga\n",
+      "Rome\n",
+      "Athens\n"
+     ]
+    }
+   ],
+   "source": [
+    "for city in european_cities:\n",
+    "    print(city)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -185,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,10 +255,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Detroit\n",
+      "Chicago\n",
+      "Denver\n",
+      "Boston\n",
+      "Portland\n",
+      "San Francisco\n",
+      "Houston\n",
+      "Orlando\n"
+     ]
+    }
+   ],
+   "source": [
+    "for city in us_cities:\n",
+    "    print(city)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -296,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "editable": true,
     "slideshow": {
@@ -319,24 +389,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "rain\n",
+      "sleet\n",
+      "snow\n",
+      "freezing fog\n",
+      "sunny\n",
+      "cloudy\n",
+      "ice pellets\n"
+     ]
+    }
+   ],
+   "source": [
+    "for conditions in weather_conditions:\n",
+    "    print(conditions)"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "What is its value of `weather` after the `for` loop has completed?"
+    "# What is its value of `weather` after the `for` loop has completed?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'ice pellets'"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "conditions"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -355,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {
     "editable": true,
     "slideshow": {
@@ -363,8 +463,23 @@
     },
     "tags": []
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "for value in range(5):\n",
+    "    print(value)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -424,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {
     "editable": true,
     "slideshow": {
@@ -434,9 +549,20 @@
      "remove_cell"
     ]
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax. Perhaps you forgot a comma? (3902730644.py, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn[24], line 2\u001b[0;36m\u001b[0m\n\u001b[0;31m    for i in range(2 5 8):\u001b[0m\n\u001b[0m                   ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax. Perhaps you forgot a comma?\n"
+     ]
+    }
+   ],
    "source": [
-    "# You can use this cell to enter your solution.\n"
+    "# You can use this cell to enter your solution.\n",
+    "for i in range(2 5 8):\n",
+    "    print(i)"
    ]
   },
   {
@@ -456,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {
     "editable": true,
     "slideshow": {
@@ -471,7 +597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {
     "editable": true,
     "slideshow": {
@@ -479,8 +605,24 @@
     },
     "tags": []
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dakar\n",
+      "Addis Ababa\n",
+      "Nairobi\n",
+      "Cairo\n",
+      "Rabat\n",
+      "Kampala\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(len(african_cities)):\n",
+    "    print(f\"{african_cities[i]}\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -520,7 +662,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {
     "editable": true,
     "slideshow": {
@@ -535,7 +677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -551,10 +693,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Helsinki is the capital of Finland.\n",
+      "Stockholm is the capital of Sweden.\n",
+      "Oslo is the capital of Norway.\n",
+      "Reykjavik is the capital of Iceland.\n",
+      "Copenhagen is the capital of Denmark.\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(len(cities)):\n",
+    "    print(f\"{cities[i]} is the capital of {countries[i]}.\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -621,7 +778,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
