--- a/L4/writing-scripts.ipynb
+++ b/L4/writing-scripts.ipynb
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "editable": true,
     "slideshow": {
@@ -164,8 +164,21 @@
     },
     "tags": []
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "functions.ipynb              temp_converter.py\n",
+      "gcp-4-writing-scripts.ipynb  untitled.py\n",
+      "\u001b[34mimg\u001b[m\u001b[m/                         use-of-ai.ipynb\n",
+      "modules.ipynb                writing-scripts.ipynb\n"
+     ]
+    }
+   ],
+   "source": [
+    "ls"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -205,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "editable": true,
     "slideshow": {
@@ -213,8 +226,21 @@
     },
     "tags": []
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "functions.ipynb              temp_converter.py\n",
+      "gcp-4-writing-scripts.ipynb  use-of-ai.ipynb\n",
+      "\u001b[34mimg\u001b[m\u001b[m/                         writing-scripts.ipynb\n",
+      "modules.ipynb\n"
+     ]
+    }
+   ],
+   "source": [
+    "%ls"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -240,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "editable": true,
     "slideshow": {
@@ -251,7 +277,9 @@
     ]
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "from temp_converter import celsius_to_fahr"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -270,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "editable": true,
     "slideshow": {
@@ -278,8 +306,21 @@
     },
     "tags": []
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "32.0"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "celsius_to_fahr(0)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -315,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "editable": true,
     "slideshow": {
@@ -326,7 +367,9 @@
     ]
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "import temp_converter as tc"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -343,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "editable": true,
     "slideshow": {
@@ -353,12 +396,25 @@
      "raises-exception"
     ]
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "32.0"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tc.celsius_to_fahr(0)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "editable": true,
     "slideshow": {
@@ -368,12 +424,25 @@
      "raises-exception"
     ]
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "26.850000000000023"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tc.kelvins_to_celsius(300)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "editable": true,
     "slideshow": {
@@ -383,8 +452,21 @@
      "raises-exception"
     ]
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-189.66999999999996"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tc.kelvins_to_fahr(150)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -645,7 +727,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
