--- a/L4/functions.ipynb
+++ b/L4/functions.ipynb
@@ -46,10 +46,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "89.6"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def celsius_to_fahr(temp):\n",
+    "    return 9 / 5 * temp +32\n",
+    "\n",
+    "celsius_to_fahr(32)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -81,10 +97,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "32.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "freezing_point = 0\n",
+    "print(celsius_to_fahr(freezing_point))"
+   ]
   },
   {
    "cell_type": "code",
@@ -914,7 +941,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
